# DistributedSystems

./: .gitignore
Signals/: Makefile  sender.cpp
TP1/Pipes/: Makefile  pipes  pipes.cpp
TP1/Signals/: receiver.cpp  sender.cpp
TP1/Sockets/: Makefile  consumer.cpp  env.h  producer.cpp
TP2/producerConsumer/: Makefile  analysis - Producers and Consumers.ipynb  miller-rabin-primality-test.cpp  miller-rabin-primality-test.h  producerConsumer.cpp  script.sh
TP2/producerConsumer/.ipynb_checkpoints/: analysis - Producers and Consumers-checkpoint.ipynb
TP2/spinlock/: Makefile  script.sh  spinlocks.cpp
TP2/spinlock/.ipynb_checkpoints/: Spinlock data analysis-checkpoint.ipynb
TP3/: go.mod  go.sum  log_validator.py  readme.md
TP3/client/: main.py
TP3/client/clientRPC/: tp3_pb2.py  tp3_pb2.pyi  tp3_pb2_grpc.py
TP3/rpc/: CMakeLists.txt  tp3.proto  tp3_grpc.pb.go  tp3_pb2_grpc.py
TP3/server/: main.go
TP3/server/log/: log.go
TP3/server/main/: main.go
TP3/server/models/: models.go
TP3/server/serverRPC/: tp3.pb.go
TP3/server/toolsTP3/: writefile.go
TP3/server/toolsTP3/semaphore/: semaphore.go
TP3/server/toolsTP3/terminalParser/: terminalParser.go
TP3/server/toolsTP3/writelog/: writefile.go
